# Traffic-Simulation-Engine

./: CMakeLists.txt  CMakePresets.json  README.md  example_map.json
example_maps/: complex_map.json
include/Geometry/: Position.h
include/Identifiers/: IDs.h  StrongID.h
include/Map/: IntersectionFinder.h  MapLoader.h
include/PathFinding/: Dijkstra.h  PathFinder.h
include/Pathfinding/: Dijkstra.h  Path.h  Pathfinder.h
include/Renderer/: Renderer.h
include/Road/: Lane.h  MapLoader.h  Node.h  Road.h  RoadGraph.h  RoadIntersection.h
include/Road/Intersection/: Intersection.h  RoadIntersection.h
include/Road/Intersection/IntersectionPolicies/: IntersectionPolicy.h
include/Route/: Route.h
include/SimulationEngine/: SimState.h  SimulationConfig.h  SimulationController.h  SimulationEngine.h
include/UI/: MainWindow.h  SpawnVehicleWindow.h
include/Vehicle/: Controller.h  Vehicle.h  VehicleController.h  VehicleFactory.h  VehicleInfo.h
src/: CMakeLists.txt  main.cpp
src/Map/: IntersectionFinder.cpp  MapLoader.cpp
src/Pathfinding/: Dijkstra.cpp
src/Renderer/: Renderer.cpp
src/Road/: Lane.cpp  MapLoader.cpp  Road.cpp  RoadGraph.cpp
src/Route/: Route.cpp
src/SimulationEngine/: SimulationController.cpp  SimulationEngine.cpp
src/UI/: MainWindow.cpp  SpawnVehicleWindow.cpp
src/Vehicle/: Vehicle.cpp  VehicleController.cpp  VehicleFactory.cpp
tests/: CMakeLists.txt  IntersectionFinder.cpp  TestVehicle.cpp
